finish day6 part1